Corrected element spacing in footer

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -116,32 +116,64 @@
 }
 
 
-
-
-
 /**
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid $grey-color-light;
-    padding: $spacing-unit 0;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+
+    -webkit-flex-flow: row wrap;
+    justify-content: space-around;
 }
 
-.footer-heading {
-    font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
-}
+.footer-name {
+    padding: 5px;
+    width: 200px;
+    height: 150px;
+    margin-top: 10px;
 
-
-.footer-byline {
-    font-size: 11px;
-    letter-spacing: 2px;
-    text-align: center;
-    text-transform: uppercase;
+    line-height: 150px;
     color: $grey-color;
-    display: block;
-    margin-left: -$spacing-unit / 2;
-    @extend %clearfix;
+    font-size: 12px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    text-align: left;
+}
+
+.footer-social {
+    padding: 5px;
+    width: 210px;
+    height: 150px;
+    margin-top: 10px;
+
+    line-height: 150px;
+    color: $grey-color;
+    font-size: 12px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.footer-copyright {
+    padding: 5px;
+    width: 200px;
+    height: 150px;
+    margin-top: 10px;
+
+    line-height: 150px;
+    color: $grey-color;
+    font-size: 12px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    text-align: right;
 }
 
 .footer-col {
@@ -236,8 +268,7 @@
 }
 
 .post-title {
-    font-size: 42px;
-    letter-spacing: -1px;
+    font-size: 60px;
     line-height: 1;
     text-align: center;
 
