--- a/css/main.scss
+++ b/css/main.scss
@@ -12,7 +12,7 @@
 $base-font-family: "NationalWeb-Book", Helvetica, Arial, sans-serif;
 $base-font-size:   20px;
 $small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
+$base-line-height: 28px;
 
 $spacing-unit:     30px;
 
